@@ -4,6 +4,9 @@ This file tracks the changes to Wing over time. Especially
 with respect to new features and compatibility changes.
 ==========================================================
 
+2023-01-06
+ * Added verify_user option to generate_relationship() in Wing::Rest.
+
 2022-12-27
  * Added X-WING-SKIP-RESULT-WRAPPER header check in Wing::Rest.
 
